# UFU-IA

./: .gitignore  CMakeLists.txt  main.cpp
CREST/: CMakeLists.txt
CREST/http/: httpserver.h
CREST/t3/: Numeros_0-9_4-neuronios.tex  Numeros_0-9_4-neuronios.txt  digits.tex  info_Numeros_0-9_4-neuronios.txt  t3_web.cpp
CREST/t4/: debug.txt  index.js  t4.cpp
Perceptron/: perceptron.cpp  perceptron.h
Redes-Neurais/: Datasets.py  RedeNeural.py  main.py
Redes-Neurais/static/: escolherDataSet.html  escolherDataSet.html.js  script.js  style.css  treinar.html
Trabalhos/T7-enhanced/: CMakeLists.txt  fnc.m  ftanh_log.m  main.cpp  mininst.h  octave-workspace
Trabalhos/T7-enhanced/src/: Func.cpp  Func.h  MLP.cpp  MLP.h  config.h
Trabalhos/T7-enhanced/static/: draw.html  generate.py  generateFiles.py  redesDisponiveis.js
Trabalhos/T7-enhanced/treinadas/: mlp_0.001000(784_1000ftanh_1000ftanh_1000ftanh_10ftanh)0.txt  mlp_0.001000(784_100ftanh_100ftanh_10ftanh)0.js  mlp_0.001000(784_100ftanh_100ftanh_10ftanh)0.txt  mlp_0.001000(784_200ftanh_200ftanh_10ftanh)0.js  mlp_0.001000(784_200ftanh_200ftanh_10ftanh)0.txt  mlp_0.001000(784_300ftanh_200ftanh_100ftanh_10ftanh)0.txt  mlp_0.010000(784_1000ftanh_1000ftanh_1000ftanh_10ftanh)0.txt  mlp_0.010000(784_1000ftanh_1000ftanh_10ftanh)0.txt  mlp_0.010000(784_1000ftanh_10ftanh)0.txt  mlp_0.010000(784_1000ftanh_10ftanh)1.txt  mlp_0.010000(784_100ftanh_100ftanh_10ftanh)0.json  mlp_0.010000(784_100ftanh_100ftanh_10ftanh)0.txt  mlp_0.010000(784_2000ftanh_10ftanh)0.txt
Trabalhos/t1-hebby-cpp/: CMakeLists.txt  main.cpp  main.py
Trabalhos/t1-hebby-cpp/tex/: hedd.tex  nnok.tex  t16possiveis.tex  verifica.tex
Trabalhos/t2-t3-hebby-perceptron-cpp/: main.cpp
Trabalhos/t2-t3-hebby-perceptron-cpp/Perceptron/: perceptron.h
Trabalhos/t2-t3-hebby-perceptron-cpp/html/: index.html
Trabalhos/t2-t3-hebby-perceptron-cpp/http/: httpserver.cpp
Trabalhos/t2-t3-hebby-perceptron-cpp/t2/: T2_2neuronio.txt  t2.cpp
Trabalhos/t2-t3-hebby-perceptron-cpp/t3/: MNIST-4neuronios.txt  Numeros_0-9_10-neuronios.txt  info_Numeros_0-9_10-neuronios.tex  info_Numeros_0-9_10-neuronios.txt  info_Numeros_0-9_4-neuronios.tex  t3.cpp
Trabalhos/t2-t3-hebby-perceptron-cpp/t4/: index.html  style.css
Trabalhos/t4-Adaline-python/: RedeNeural.py  main.py
Trabalhos/t4-Adaline-python/static/: criarDataSet.html  escolherDataSet.html  script.js  style.css  treinar.html
Trabalhos/t5-Adaline-js/: Quintaaula_regressaolinear.pptx  RegressaoLinear.sce  Trabalho05_regressaolinear.pptx  basedeobservacoes.txt  main.html  main.js  thread_test.py
Trabalhos/t6-MLP-cpp/: CMakeLists.txt  dados.m  debug.txt  sextaaula_retropropagacaodoerro.pptx  trabalho06_aproximacaofuncional.pptx
Trabalhos/t6-MLP-cpp/html/: main.cpp
Trabalhos/t6-MLP-cpp/http/: httpserver.cpp  httpserver.h  json.cpp  json.h  sha256.cpp  sha256.h
Trabalhos/t6-MLP-cpp/mlp/: MLP.cpp  MLP.h  config.h  main.cpp
Trabalhos/t6-MLP-cpp/static/: GETPOINTS.html  GETTINGNET.html  RUNNING.html
Trabalhos/t7-MLP_mininst-cpp/: CMakeLists.txt  main.cpp  main2.cpp  mininst.h
Trabalhos/t7-MLP_mininst-cpp/mlp/: Histogram.cpp  Histogram.h  MLP.cpp  MLP.h  MLP.puml  MLP2.cpp  MLP2.h  config.h  dados.m  main.cpp
Trabalhos/t7-MLP_mininst-cpp/static/: draw.html  generateFiles.py  redesDisponiveis.js  redesDisponiveis.json  teste.html
html/: index.html
http/: httpserver.cpp  httpserver.h
t2/: T2_1neuronio.txt  t2.cpp
t3/: Numeros_0-9_10-neuronios.txt  Numeros_0-9_4-neuronios.txt  draw-pixel.html  t3.cpp  t3_mninst.cpp
trabalho1/: main.cpp
